--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tripos Practice Selector</title>
+    <title>Tripos Practice Selector (FSRS)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1>Tripos Practice Selector</h1>
 
+        <!-- GitHub Sync Section -->
         <div class="card" id="github-controls">
             <h2>GitHub Sync</h2>
             <p>Store your progress in a private GitHub repository to sync across devices.</p>
@@ -22,42 +23,60 @@
             </div>
             <div class="button-group">
                 <button id="load-progress-btn">Load Progress</button>
-                <button id="save-progress-btn">Save Selected to GitHub</button>
+                <button id="save-progress-btn">Save Progress</button>
+                <button id="reset-progress-btn" class="danger-btn">Reset All Progress</button>
             </div>
             <div id="sync-status"></div>
         </div>
 
-        <div class="card" id="generator-controls">
-            <h2>Generate Questions</h2>
+        <!-- Practice Setup Section -->
+        <div class="card" id="practice-setup">
+            <h2>Start Practice Session</h2>
+            <p>The FSRS algorithm will select the topics that need the most attention based on your past performance.</p>
             <div class="form-grid">
-                <label for="num-questions">Number of questions:</label>
-                <input type="number" id="num-questions" value="5" min="1">
-
-                <label for="module-filter">Filter by Module:</label>
-                <select id="module-filter">
-                    <option value="all">All Modules</option>
-                </select>
-
-                <label for="paper-filter">Filter by Paper:</label>
-                <select id="paper-filter">
-                    <option value="all">All Papers</option>
-                </select>
-
-                <label for="selection-mode">Selection Mode:</label>
-                <div class="radio-group">
-                    <input type="radio" id="mode-random" name="selection-mode" value="random" checked>
-                    <label for="mode-random">Fully Random</label>
-                    <input type="radio" id="mode-homogeneous" name="selection-mode" value="homogeneous">
-                    <label for="mode-homogeneous">Homogeneous</label>
-                </div>
+                <label for="num-problems">How many problems do you want to do?</label>
+                <input type="number" id="num-problems" value="3" min="1" max="20">
             </div>
-            <button id="generate-btn">Generate</button>
+            <button id="start-session-btn" class="primary-btn">Start Session</button>
         </div>
 
-        <div class="card" id="results-container">
-            <h2>Generated Questions</h2>
-            <p id="results-placeholder">Your questions will appear here. Check the box next to a question and click "Save Selected" to mark it as done.</p>
-            <ul id="results-list"></ul>
+        <!-- Active Session Section (Hidden by default) -->
+        <div class="card" id="active-session" style="display: none;">
+            <h2>Current Session</h2>
+            <p>Select a problem to work on. You can complete them in any order.</p>
+            <div id="session-dashboard" class="session-grid">
+                <!-- Problem cards will be injected here -->
+            </div>
+            <button id="finish-early-btn" class="secondary-btn" style="margin-top: 20px;">Finish Session Early</button>
+        </div>
+
+        <!-- Completion Screen (Hidden by default) -->
+        <div class="card" id="session-complete" style="display: none;">
+            <h2>Session Complete!</h2>
+            <p>Great job! Don't forget to save your progress to GitHub.</p>
+            <button id="restart-btn">Start New Session</button>
+        </div>
+
+        <!-- Info / Algorithm Explanation -->
+        <div class="card" id="info-section">
+            <details>
+                <summary>How it works (FSRS Algorithm)</summary>
+                <div class="details-content">
+                    <p>This application uses the <strong>Free Spaced Repetition Scheduler (FSRS)</strong> algorithm to optimize your study schedule. Instead of reviewing everything randomly, the system prioritizes topics you are likely to forget.</p>
+                    <ul>
+                        <li><strong>Topics:</strong> The system tracks your mastery of specific topics (e.g., "Plastic theory").</li>
+                        <li><strong>Ratings:</strong>
+                            <ul>
+                                <li><strong>Again (1):</strong> Complete blackout. You need to review this topic very soon.</li>
+                                <li><strong>Hard (2):</strong> You solved it, but it took significant effort or you made minor errors.</li>
+                                <li><strong>Good (3):</strong> Solved correctly with a normal amount of effort.</li>
+                                <li><strong>Easy (4):</strong> Solved quickly and effortlessly.</li>
+                            </ul>
+                        </li>
+                        <li><strong>Scheduling:</strong> Based on your ratings, the algorithm calculates the optimal "Next Review Date" for each topic. When you start a session, it picks due topics first.</li>
+                    </ul>
+                </div>
+            </details>
         </div>
     </div>
 
